--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.view.suffix=.jsp
 
 
 #Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/sunbasedata
+spring.datasource.url=jdbc:mysql://localhost:3306/sunbase
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
